--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 url = "2.2.2"
+
+# For Pueue 3.4.1, will not work with 4.x
+pueue-lib = "0.26.1"
